# interview_assignment

./: .gitignore  README.md  setup_ubuntu.sh  setup_windows.bat  setup_windows.ps1
problem1-log-file-manager/: CMakeLists.txt
problem1-log-file-manager/include/: LogFileManager.h
problem1-log-file-manager/src/: LogFileManager.cpp  main.cpp
problem2-circular-buffer/: CMakeLists.txt
problem2-circular-buffer/include/: CircularBuffer.hpp
problem2-circular-buffer/src/: main.cpp
problem3-parallel-processor/: CMakeLists.txt
problem3-parallel-processor/include/: ParallelProcessor.h
problem3-parallel-processor/src/: main.cpp
problem4-restful-api-server/: .env.example  pyproject.toml  requirements.txt  test_api.py
problem4-restful-api-server/app/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
